Thu Feb 27 11:13:51 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-gafino.adb: Change Dummy_Name from "" to "none".

	* s-garfil.adb, s-garfil.ads, s-gafino.adb: Change
 	Set_Register_Filter into Set_Registration_Filter and add several
 	default behaviour.

Wed Feb 26 11:28:07 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* Makefile.am: Reduce the effort of a third party to add a new
 	filter. Clear almost everything that was dedicated to filters and
 	add @FILTERFILE@ which indicates where to include global filter
 	makefile.

	* Makefile.am: Forgot to copy ada files sources and objects.

Mon Feb 24 12:54:55 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-garhea.ads: Add a new procedure Initialize.

	* s-garhea.adb: Set Opcode size right from the beginning. This is
 	used to avoid unnecessary buffer copies.

	* s-garfil.adb: Use the previous knowledge to reduce unnecessary
 	buffer copies.

Fri Feb 21 19:53:29 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* Makefile.am: Add zip filtering. Z library is now included in the
        release. By default, it is not installed but with
	--with-filters="zip", the Z library is included in garlic
	library and Z binding and filter are also included.
	

Fri Feb 21 17:35:34 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-gafizi.adb, s-gafizi.ads: Add zip filtering.

	* s-garhea.adb, s-garfil.adb, s-garfil.ads: Optimization of buffer
 	copies.

Thu Feb 20 14:45:29 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-garfil.ads, s-garfil.adb, s-gafino.ads, s-gafino.adb: Add
 	filtering. Only filter None has been included.
	
	* s-garsta.adb: Add filtering packages elaboration and call
 	System.Garlic.Filters.Initialize.

	* s-garhea.adb: Set filtering hooks in Send and Data_Arrived.
	This is a draft. Need to avoid copy optimization.
	
Thu Feb 13 19:35:41 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-garter.adb: Add a new procedure Local_Termination to provide